# SPMD-IR-EuroMPI25-Artifact

./: .gitmodules  README.md
evaluation-benchmark-suites/: .gitignore
evaluation-benchmark-suites/MBB/level32/RMA/: Correct-lockunlock-get_accumulate-001.c  Correct-lockunlock-get_compare_and_swap-001.c  Correct-lockunlock-get_fetch_and_op-001.c  Correct-lockunlock-rput_rget-001.c
evaluation-benchmark-suites/RRB/MPIRMA/static/: 020-MPI-static-get-get-recursive-local-no.c  028-MPI-static-mult-win-fence-local-no.c  029-MPI-static-flush-multiple-wins-local-yes.c  (+1 more)
evaluation-benchmark-suites/proxyApps/TeaLeaf/: build.sh
evaluation-benchmark-suites/proxyApps/miniWeather/: .gitignore
evaluation-results/MBB/: results.csv
evaluation-results/RRB/MIXED/: results.csv
evaluation-results/RRB/MPIRMA/: results.csv
evaluation-results/RRB/NVSHMEM-gpuInitiated/: results.csv
evaluation-results/cqResults/MBB/: results.csv
evaluation-results/cqResults/summaries/: MBB.txt  RRB-MPIRMA.txt  RRB-NVSHMEM-gpuInitiated.txt  RRB-NVSHMEM-hostInitiated.txt  RRB-NVSHMEM-hybridInitiated.txt  RRB-SHMEM.txt
evaluation-results/summaries/: MBB.txt  RRB-MIXED.txt  RRB-NVSHMEM-gpuInitiated.txt  RRB-NVSHMEM-hybridInitiated.txt  RRB-SHMEM.txt
reproducability/: build_apptainer_images.sh  job_classification_quality.sh  run_proxyapps.sh
reproducability/apptainer/: Apptainer.must.def  Apptainer.rmasanitizer.def  common.sh
reproducibility/: build_apptainer_images.sh  job_classification_quality.sh  job_proxyapps.sh  parse_cq_results.sh  run_cq_tests.sh  run_proxyapps.sh  run_test.py  run_tests.sh
reproducibility/apptainer/: Apptainer.must.def  Apptainer.parcoach.def  Apptainer.rmasanitizer.def  Apptainer.spmdir.def  common.sh  requirements.txt  shmem.sh
reproducibility/util/: parse_results.py  run_test.py
spmd/: CMakeLists.txt  README.md
spmd-ir/spmd/: CMakeLists.txt  README.md  REUSE.toml
spmd-ir/spmd/LICENSES/: LicenseRef-MPICH.txt
spmd-ir/spmd/includesProgramModels/: CMakeLists.txt
spmd-ir/spmd/lib/: CMakeLists.txt
spmd-ir/spmd/lib/spmd/: CMakeLists.txt  SPMDAttributes.cpp  SPMDDialect.cpp  SPMDOps.cpp  SPMDTypes.cpp
spmd-ir/spmd/lib/spmd/Analysis/: CMakeLists.txt  ReachingDefinitionAnalysis.cpp  UniformityAnalysis.cpp
spmd-ir/spmd/lib/spmd/Utils/: AliasUtils.cpp  CMakeLists.txt  TransformUtils.cpp
spmd-ir/spmd/lib/spmd/passes/: CMakeLists.txt  CheckCollectives.cpp  CheckDataRace.cpp  ConvertApiCallsToSPMD.cpp  ConvertArithSelectToIf.cpp  ConvertLLVMToFunc.cpp  ConvertSCFSwitchToIf.cpp  DeleteInlinedFuncs.cpp  HandleLLVMUnreachable.cpp  InlineGPULaunchFuncs.cpp  MultiValueAnalysis.cpp  PrepareLLVMFuncInline.cpp  SimplifyCmpOps.cpp  common.cpp  common.h
spmd-ir/spmd/lib/spmd/passes/CACTS/: CMakeLists.txt  cudaTransformations.cpp  cudaTransformations.h  mpiTransformations.cpp  mpiTransformations.h  ncclTransformations.cpp  ncclTransformations.h  nvshmemTransformations.cpp  nvshmemTransformations.h  shmemTransformations.cpp  shmemTransformations.h  utils.cpp  utils.h
spmd-ir/spmd/spmd-opt/: CMakeLists.txt  spmd-opt.cpp
spmd-ir/spmd/utility/: CMakeLists.txt  spmd-verify.sh
spmd/include/spmd/: SPMDAttributes.td  SPMDOps.td  SPMDPasses.td  SPMDTypes.td  Traits.h
spmd/includesProgramModels/: CMakeLists.txt
spmd/lib/spmd/: SPMDOps.cpp
spmd/lib/spmd/passes/: CMakeLists.txt  CheckCollectives.cpp  CheckDataRace.cpp  ConvertApiCallsToSPMD.cpp  ConvertArithSelectToIf.cpp  ConvertLLVMToFunc.cpp  ConvertSCFSwitchToIf.cpp  DeleteInlinedFuncs.cpp  HandleLLVMUnreachable.cpp  InlineGPULaunchFuncs.cpp  MultiValueAnalysis.cpp  PrepareLLVMFuncInline.cpp  SimplifyCmpOps.cpp
spmd/lib/spmd/passes/CACTS/: CMakeLists.txt  cudaTransformations.cpp  cudaTransformations.h  mpiTransformations.cpp  mpiTransformations.h  ncclTransformations.cpp  ncclTransformations.h  nvshmemTransformations.cpp  nvshmemTransformations.h  shmemTransformations.cpp  shmemTransformations.h  utils.cpp  utils.h
spmd/spmd-opt/: CMakeLists.txt  spmd-opt.cpp
spmd/utility/: CMakeLists.txt  spmd-verify.sh
(+27520 files in other folders)
